# ros2_xarm6_zt_ws

./: README.md
src/gs_sensor/: CMakeLists.txt  package.xml
src/gs_sensor/include/gs_sensor/: gs_sensor.hpp
src/gs_sensor/src/: gs_sensor.cpp
src/nerf_data_recorder/: CMakeLists.txt  fault_config.yaml  nerf_data_recorder_结构框图.eddx  package.xml
src/nerf_data_recorder/config/: kinematics.yaml  planning_pipelines.yaml  planning_scene_monitor.yaml  trajectory_execution.yaml  xarm6_with_D405.srdf  xarm_params.yaml  xarm_params_cp.yaml
src/nerf_data_recorder/include/cvtfrecorder/: cvtfrecorder.hpp
src/nerf_data_recorder/launch/: MoveItConfig.py  data_recorder_launch.py  get_frame.py  rs_launch.py
src/nerf_data_recorder/meshes/: FL_base.stl
src/nerf_data_recorder/rviz/: xarm6_with_D405.rviz
src/nerf_data_recorder/src/: cvtfrecorder.cpp
src/nerf_data_recorder/urdf/: xarm6_with_D405.urdf
src/realsense2_camera/include/: base_realsense_node.h  constants.h
src/realsense2_camera/launch/: rs_launch.py
src/realsense2_camera/project_launch/base/: rs_launch.py
src/realsense2_camera/src/: base_realsense_node.cpp  rs_node_setup.cpp  sensor_params.cpp
src/xarm_controller/config/: xarm6_controllers.yaml
src/xarm_controller/launch/: _ros2_control.launch.py
src/xarm_moveit_config/launch/: _robot_moveit_realmove.launch.py  xarm6_moveit_realmove.launch.py
src/xarm_msgs/msg/: RobotMsg.msg
